[package]
name = "orbit-track"
version = "0.1.0"
edition = "2024"

[dependencies]
chrono = "0.4.41"
color-eyre = "0.6.4"
futures = "0.3.31"
lazy_static = "1.5.0"
serde = { version = "1.0.219", features = ["derive"] }
serde_json = "1.0.140"
sky_track = {path = "../sky_track"}
tracing = "0.1.41"
tracing-error = "0.2.1"
tracing-subscriber = { version = "0.3.19", features = ["env-filter"] }

[target.'cfg(target_arch = "wasm32")'.dependencies]
ratatui = { version = "0.29.0", default-features = false }
ratzilla = "0.0.6"
console_error_panic_hook = "0.1.7"
tracing-web = "0.1.3"
wasm-bindgen = "0.2.100"
wasm-bindgen-futures = "0.4.50"
web-sys = { version = "0.3.77", features = ["Clipboard","RequestInit","Request","Storage","Response","Window"] }
futures = { version = "0.3.31", features = ["executor"] }
serde-wasm-bindgen = "0.6.5"

[target.'cfg(not(target_arch = "wasm32"))'.dependencies]
arboard = "3.5.0"
crossterm = "0.29.0"
directories = "6.0.0"
ureq = { version = "3.0.11", features = ["json"] }
ratatui = "0.29.0"
dotenv = "0.15.0"
